<resources>
    <string name="app_name">This</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in to THIS</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="username_invalid">Username invalid</string>
    <string name="username_wrong">Wrong Username or Password</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="connection_available">Connection is available</string>
    <string name="connection_not_available">It looks like your connection is NOT available</string>
    <string name="connection_slow">It looks like you have slow connection</string>
    <string name="connection_switch_online">Switch to ONLINE</string>
    <string name="connection_switch_offline">Switch to OFFLINE</string>
    <string name="connection_switch_online_message">Application switch to ONLINE</string>
    <string name="connection_switch_offline_message">Application switch to OFFLINE</string>
    <string name="dismiss">DISMISS</string>
    <string name="general_search">Search here</string>
    <string name="general_save">Save</string>
    <string name="general_required_fields">Please fill in a valid value for required fields</string>
    <string name="task_updated">Task Updated</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Get Started</string>
    <string name="main_menu_wo"></string>
    <string name="main_menu_map"></string>
    <string name="action_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_detail">Detail</string>
    <string name="action_scan">Scan Barcode</string>
    <string name="action_report">Report</string>
    <string name="action_capture_image">Capture Image</string>
    <string name="action_attach_image">Attach Image</string>
    <string name="action_attach_document">Attach Document</string>
    <string name="action_attach_signature">Attach Signature</string>
    <string name="action_create_followup">Create Follow Up</string>
    <string name="title_home">Create</string>
    <string name="title_jobs"></string>
    <string name="title_activity">Activities</string>
    <string name="field_crew">Field Crew</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_repeat">Repeat</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="login_title">Log in</string>
    <string name="login_failed">Login Failed</string>
    <string name="login_massege">Incorrect username or password, please try again</string>
    <string name="server_dialog_empty_title">Warning</string>
    <string name="server_dialog_empty_question">Server Address cant empty</string>
    <string name="server_dialog_wrong_title">Warning</string>
    <string name="server_dialog_wrong_question">Wrong Server Address</string>
    <string name="server_dialog_reachable_title">Warning</string>
    <string name="server_dialog_reachable_question">Cant reach server connection</string>
    <string name="logout_title">Logout</string>
    <string name="logout_qustion">Are you sure you want to logout?</string>
    <string name="attendance_title">Save</string>
    <string name="attendance_qustion">Are you sure you want to save attendance?</string>
    <string name="task_title">Save</string>
    <string name="task_qustion">Are you sure you want to save task?</string>
    <string name="task_cancel_title">Save</string>
    <string name="task_cancel_qustion">Are you sure you want to cancel task?</string>
    <string name="delete_image_attendance_title">Delete</string>
    <string name="delete_image_attendance_qustion">Are you sure you want to delete image?</string>
    <string name="error_attendance_title">Warning!</string>
    <string name="error_attendance_qustion">Image and your location cannot be empty</string>
    <string name="error_task_title">Warning!</string>
    <string name="error_task_qustion">Every field cannot be empty</string>
    <string name="error_date_task_title">Warning!</string>
    <string name="error_date_task_qustion">Your Actual date cannot be past than Schedule date</string>
    <string name="empty_attendance_checkin_title">Warning!</string>
    <string name="empty_attendance_checkin_qustion">Click chek in first</string>
    <string name="empty_attendance_checkout_title">Warning!</string>
    <string name="empty_attendance_checkout_qustion">Click check out first</string>
    <string name="change_language_dialog">Change Language</string>
    <string name="change_language_question">Are you sure you want to change language?</string>
    <string name="change_pattern_dialog">Change Pattern</string>
    <string name="change_pattern_dialog_question">Do you want to change pattern?</string>
    <string name="input_pattern">Input Your Current Pattern!</string>
    <string name="change_switch_dialog">Switch Pattern</string>
    <string name="change_switch_dialog_question">Do you want to active pattern?</string>
    <string name="server_next">Next</string>
    <string name="server_try_again">Try again</string>
    <string name="server_title">Error</string>
    <string name="server_error_message">Your IP Address not correct, please input again!</string>
    <string name="server_address">Server Address</string>
    <string name="server">Server Address</string>
    <string name="later">Later</string>
    <string name="pattern_qustion">Do you want to activate Pattern Login feature?</string>
    <string name="pattern_title">Information</string>
    <string name="reinput_pattern_message">Please input pattern again</string>
    <string name="reinput_pattern_failed">Pattern not match!</string>
    <string name="maps_gps_is_enable">GPS is enabled</string>
    <string name="maps_gps_is_disable">GPS is disable</string>
    <string name="maps_permissions_granted">All Permissions Granted Successfully</string>
    <string name="settings_password">Password</string>
    <string name="settings_change_password">Change Password</string>
    <string name="settings_pattern">Password Pattern</string>
    <string name="settings_change_pattern">Change Password Pattern</string>
    <string name="settings_enable_pattern">Enable Password Pattern</string>
    <string name="settings_enable_dark_mode">Enable Dark Mode</string>
    <string name="settings_logs">Logs</string>
    <string name="settings_cache">Cache</string>
    <string name="settings_logs_detail">Show Logs</string>
    <string name="settings_cache_detail">Delete Cache</string>
    <string name="settings_about">About Us</string>
    <string name="settings_help_center">Help Center</string>
    <string name="settings_about_this">About This</string>
    <string name="settings_attendance">Attendance</string>
    <string name="settings_language">Language</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_user">User</string>
    <string name="settings_change_pattern_success">Change Pattern Success</string>
    <string name="settings_change_pattern_failed">Change Pattern Failed</string>
    <string name="settings_change_pattern_activity">Input Current Pattern</string>
    <string name="about_this_description">
        \t \t
        \t \t THIS is a subsidiary of the TALIAN group.
        \n \n
        \t \t Talian is the first IBM Gold Partner for Maximo in Indonesia, TALIAN presently has the largest number of Certified IBM Maximo consultants and engineers with prodigious implementation experiences of Enterprise Asset Management (EAM) in oil and gas, power generation, manufacture, utilities, aviation, logistic, transportation and media.
        \n \n
        \t \t Become a Pioneer of a Mobile Enterprise Industry Solutions with large market capitalization in the world and help customers to solve their problems.
    </string>
    <string name="workorder">Work Order</string>
    <string name="desc">Description</string>
    <string name="longdesc">Long Description</string>
    <string name="date">Date</string>
    <string name="period">Period</string>
    <string name="time">Time</string>
    <string name="clock">00 : 00</string>
    <string name="strip"> - </string>
    <string name="serviceleader">Service Leader</string>
    <string name="name">Name</string>
    <string name="tools">Tools</string>
    <string name="rooms">Rooms</string>
    <string name="location">Location</string>
    <string name="Asset">Asset</string>
    <string name="QR">QR Code</string>
    <string name="lines">--------------------</string>
    <string name="stat">Status</string>
    <string name="line">-</string>
    <string name="worktype">Work Type</string>
    <string name="priority">Priority</string>
    <string name="normal">Normal</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="estimatedwork">Estimated Work Duration</string>
    <string name="hourminute">Hours : Minutes</string>
    <string name="attachments">Attachments</string>
    <string name="digital_sign">Digital Sign</string>
    <string name="image">Image</string>
    <string name="reportDate">Reported Date</string>
    <string name="service_address">Service Address</string>
    <string name="create">Create</string>
    <string name="estimatedhour">Please enter estimated hour value</string>
    <string name="estimatedminute">Please enter estimated minute value</string>
    <string name="estimatedhour_estimatedminute">Please enter estimated hour and estimated minute value!</string>
    <string name="estHour"> Hour</string>
    <string name="estMinute"> Minute</string>
    <string name="workorder_update_success">Workorder have been updated successfully</string>
    <string name="workorder_update_failed">Workorder failed to update</string>
    <string name="workorder_upload_failed">Workorder Attachment failed to upload</string>
    <string name="service_request_create">Create Service Request</string>
    <string name="service_request_cancel">Do you want to cancel Service Request?</string>
    <string name="workorder_create_success">New Work Order has been created</string>
    <string name="workorder_create_failed">New Work Order failed to created</string>
    <string name="workorder_followup_create_success">New Follow Up WO have been created</string>
    <string name="workorder_followup_create_failed">New Follow Up WO failed to created</string>
    <string name="create_workorder_cancel">Do you want to cancel Work Order?</string>
    <string name="followup_wo_cancel">Do you want to cancel Follow Up Wo?</string>
    <string name="turn_off_flashlight">Turn Off</string>
    <string name="turn_on_flashlight">Turn On</string>
    <string name="message_qr">Visit the QR points that match the location you are going to work on, then scan the QR code.</string>
    <string name="massege_note_report">Submit information and complaints, if needed.</string>
    <string name="slide_1">Welcome</string>
    <string name="slide_2">Manage Demand</string>
    <string name="slide_2_desc">Receipt Work Request from various source</string>
    <string name="slide_3">Plan Work</string>
    <string name="slide_3_desc">Workload balancing and scheduled prioritization</string>
    <string name="slide_4">Informative</string>
    <string name="slide_4_desc">Inform and enable technicians</string>
    <string name="job_Pending">Pending </string>
    <string name="job_Approve">Approve</string>
    <string name="data">No Data Displayed</string>
    <string name="Note">Notes</string>
    <string name="dialog_estdur">Estimated Work Duration</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="button_estdur_save">Save</string>
</resources>