<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 by This.ID, Indonesia . All Rights Reserved.
  ~
  ~ This software is the confidential and proprietary information of
  ~ This.ID. ("Confidential Information").
  ~
  ~ Such Confidential Information shall not be disclosed and shall
  ~ use it only	 in accordance with the terms of the license agreement
  ~ entered into with This.ID; other than in accordance with the written
  ~ permission of This.ID.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_conn"
        android:icon="@drawable/ic_conn_on"
        android:title="Connection"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_notif"
        android:icon="@drawable/ic_notification"
        android:title="Send"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="Send"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_capture_image"
        android:title="@string/action_capture_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_attach_image"
        android:title="@string/action_attach_image"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_attach_document"
        android:title="@string/action_attach_document"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create_followup"
        android:title="@string/action_create_followup"
        app:showAsAction="never"/>

    <item
        android:id="@+id/scan_menu"
        android:icon="@drawable/ic_add_black"
        android:title="add"
        app:showAsAction="ifRoom" />
</menu>