<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Copyright (c) 2019 by This.ID, Indonesia . All Rights Reserved. <BR>
  ~  * <BR>
  ~  * This software is the confidential and proprietary information of
  ~  * This.ID. ("Confidential Information").<BR>
  ~  * <BR>
  ~  * Such Confidential Information shall not be disclosed and shall
  ~  * use it only	 in accordance with the terms of the license agreement
  ~  * entered into with This.ID; other than in accordance with the written
  ~  * permission of This.ID. <BR>
  ~  **/
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_login_hor_margin"
    android:layout_marginTop="@dimen/activity_login_ver_margin"
    android:layout_marginRight="@dimen/activity_login_hor_margin"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/ip_bg"
        android:elevation="2dp"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rectangle_white"
            android:drawableStart="@drawable/ic_on_focus"
            android:drawablePadding="@dimen/general_padding_10dp"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:paddingTop="@dimen/general_padding_10dp"
            android:paddingBottom="@dimen/general_padding_10dp"
            android:textSize="@dimen/base_text_size_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/general_margin_10dp"
        android:background="@drawable/ip_bg"
        android:elevation="2dp"
        app:boxBackgroundMode="none"
        app:passwordToggleContentDescription="@string/desc"
        app:passwordToggleDrawable="@drawable/ic_eyes"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/password_toggle_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rectangle_white"
            android:drawableStart="@drawable/ic_on_focus_pass"
            android:drawablePadding="@dimen/general_padding_10dp"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="0dp"
            android:textSize="@dimen/base_text_size_14" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginbt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/general_margin_25dp"
        android:background="@drawable/ic_rectangle_blue"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/login_title"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>

