<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="296dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:text="Title"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/desc"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/layout_two_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="17dp"
                    android:background="@drawable/ic_rectangle_blue2"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/later"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="17dp"
                    android:background="@drawable/ic_rectangle_blue2"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/dialog_cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_one_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_middle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="17dp"
                    android:background="@drawable/ic_rectangle_blue2"
                    android:text="@string/start"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>
