<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Copyright (c) 2019 by This.ID, Indonesia . All Rights Reserved. <BR>
  ~  * <BR>
  ~  * This software is the confidential and proprietary information of
  ~  * This.ID. ("Confidential Information").<BR>
  ~  * <BR>
  ~  * Such Confidential Information shall not be disclosed and shall
  ~  * use it only	 in accordance with the terms of the license agreement
  ~  * entered into with This.ID; other than in accordance with the written
  ~  * permission of This.ID. <BR>
  ~  **/
  ~
  ~
  -->
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/general_padding_25dp"
        android:background="@drawable/estdur_dialog_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlueNew"
            android:text="@string/dialog_estdur"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/base_text_size_20"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"
                    android:textSize="@dimen/text_size_dialog_estdur"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/colorBlueNew"/>
                <EditText
                    android:id="@+id/esdur_hours"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="00"
                    android:textSize="@dimen/text_size_dialog_estdur"
                    android:maxLength="2"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlueNew"
                    android:inputType="number"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    android:textSize="@dimen/text_size_dialog_estdur"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/colorBlueNew"/>
                <EditText
                    android:id="@+id/esdur_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="00"
                    android:textSize="@dimen/text_size_dialog_estdur"
                    android:maxLength="2"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlueNew"
                    android:inputType="number"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save_est"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_estdur_save"
            android:fontFamily="@font/poppins"
            android:background="@drawable/ic_rectangle_528"
            android:textColor="@color/white"/>

    </LinearLayout>
