<?xml version="1.0" encoding="utf-8"?><!--
  ~ /**
  ~  * Copyright (c) 2019 by This.ID, Indonesia . All Rights Reserved. <BR>
  ~  * <BR>
  ~  * This software is the confidential and proprietary information of
  ~  * This.ID. ("Confidential Information").<BR>
  ~  * <BR>
  ~  * Such Confidential Information shall not be disclosed and shall
  ~  * use it only	 in accordance with the terms of the license agreement
  ~  * entered into with This.ID; other than in accordance with the written
  ~  * permission of This.ID. <BR>
  ~  **/
  ~
  ~
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="id.thork.app.pages.intro.element.IntroViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".pages.intro.IntroActivity">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutBars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/description1"
                android:gravity="center"
                android:orientation="horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/linear_margin_top_intro"
            android:layout_marginBottom="@dimen/linear_margin_bottom_intro"
            android:elevation="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_left_right_intro"
                android:layout_marginRight="@dimen/button_margin_left_right_intro"
                android:layout_weight="1"
                android:background="@color/transparant"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/skip"
                android:textColor="@color/colorGraySkip"/>

            <Button
                android:id="@+id/start"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_skip_left_right_intro"
                android:layout_marginRight="@dimen/button_skip_left_right_intro"
                android:layout_weight="0.5"
                android:textSize="12sp"
                android:background="@drawable/btn_rounded"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/start"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_left_right_intro"
                android:layout_marginRight="@dimen/button_margin_left_right_intro"
                android:layout_weight="1"
                android:background="@color/transparant"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/next"
                android:textColor="@color/colorPrimaryBackground" />
        </LinearLayout>

    </RelativeLayout>
</layout>